fixed up client state saving integration test parameters